# knut

./: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  configure  configure.ac  index.html  params.json  pdde.spec  pdde.spec.in  regen.sh
ATLAS/: Makefile  (+1 more)
UMFPACK/AMD/Source/: Makefile  Makefile.am  amd.f  amdbar.f
knut/: CMakeLists.txt  COPYING  Knut.files  Knut.includes  NEWS  build-mac-clang.sh  build-mac-debug.sh  build-mac.sh  build-unix-debug.sh  build-unix.sh  build-win-cross.sh  build-win64-cross.sh  build-windows.bat  createAppBundle.cmake  format.sh  knut.spec.cmake  mkrevision.sh  test-all.sh  w64toolchain  windeploy.sh  wininstaller.nsi.cmake  wintoolchain
knut/cli/: CMakeLists.txt  main.cpp  mat2julia.cpp  vfknut.cpp
knut/demo/: CMakeLists.txt
knut/demo/glass/: CMakeLists.txt  cfile-nssw.knut  cfile-pd.knut  cfile-pdsw.knut  cfile-start.knut  mackey-glass.vf  sys-glass.cpp
knut/demo/laser/: CMakeLists.txt  cfile-hopfsw.knut  cfile-lp.knut  cfile-ns.knut  cfile-pd.knut  cfile-psol.knut  cfile-start.knut  laser.vf  sys-laser.cpp
knut/demo/logistic/: CMakeLists.txt  sys-logistic.cpp
knut/demo/milloneup/: CMakeLists.txt  cfile-ns.knut  cfile-start.knut  cfile-tr.knut  milloneup.vf  sys-milloneup.cpp
knut/demo/milltwodown/: CMakeLists.txt  sys-milltwodown.cpp
knut/demo/milltwofull/: CMakeLists.txt  sys-milltwofull.cpp
knut/demo/milltwoup/: CMakeLists.txt  sys-milltwoup.cpp
knut/demo/simple_laser/: CMakeLists.txt  cfile-hbct.knut  cfile-hbsw.knut  cfile-start.knut  simple_laser.vf  sys-simple_laser.cpp
knut/demo/tq/: CMakeLists.txt  cfile-lp-1-a.knut  cfile-lp-1-b.knut  cfile-lp-2-a.knut  cfile-lp-2-b.knut  cfile-lp-a.knut  cfile-lp-b.knut  cfile-ns.knut  cfile-pdsw-1.knut  cfile-pdsw-2.knut  cfile-pdsw.knut  cfile-start.knut  cfile-tr.knut  sys-tq.cpp  tq.vf
knut/demo/traffic/: CMakeLists.txt  README  cfile-lp-a.knut  cfile-lp-b.knut  cfile-ns-a.knut  cfile-ns-b.knut  cfile-nssw-a.knut  cfile-nssw-b.knut  cfile-start-a.knut  cfile-start-b.knut  sys-traffic3cars.cpp  sys-trafficncars.cpp  traffic3cars.vf
knut/demo/turn/: CMakeLists.txt  cfile-ns-ref.knut  cfile-ns-sa.knut  cfile-ns-sb.knut  cfile-ns.knut  cfile-nssw-ref.knut  cfile-nssw.knut  cfile-start.knut  sys-turn.cpp  turn.vf
knut/demo/turntwo/: CMakeLists.txt  cfile-lp-1.knut  cfile-lp-2.knut  cfile-lp.knut  cfile-ns-1.knut  cfile-ns-2.knut  cfile-ns.knut  cfile-nssw.knut  cfile-start.knut  sys-turntwo.cpp  turntwo.vf
knut/demo/vanderpol/: CMakeLists.txt  cfile-start.knut  sys-vanderpol.cpp  vanderpol.vf
knut/doc/: ddedoc.cls  macros.tex  manual-bibl.bib  manual.tex
knut/gui/: CMakeLists.txt  chartwindow.cpp  chartwindow.h  compthread.cpp  compthread.h  constqtgui.cpp  constqtgui.h  datachart.cpp  datachart.h  knut.rc  macopenevent.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  paramview.cpp  paramview.h  plotdata.cpp  plotdata.h  plotwindow.cpp  plotwindow.h  screendialog.h
knut/gui/MacOS/: Info.plist  Info.plist.cmake
knut/gui/images/: convert
knut/laarpack/: CMakeLists.txt  blas.h  laarpack.f  laarpack.h  mindblas.f
knut/matlab/: CMakeLists.txt  branch2knmat.m  ddemult.m  knmat2branch.m  knut.cpp  knut2dde.m  mxdata.cpp  mxdata.h  torplot.m  torsolplotbw.m
knut/mxml/: CMakeLists.txt  mxml-attr.c  mxml-file.c  mxml-index.c  mxml-string.c  mxml.h
knut/src/: CMakeLists.txt  City.cpp  City.h  base58.cpp  base58.h  basecolloc.cpp  basecolloc.h  basecomp.cpp  basecomp.h  basepoint.cpp  basepoint.h  config.h.cmake  constants.cpp  constants.h  constants_compat.cpp  cspblas.c  cspblas.cpp  cspblas.h  expr.cpp  expr.h  exprsystem.cpp  exprsystem.h  hypermatrix.h  knerror.cpp  knerror.h  knutsys.h  mat4data.cpp  mat4data.h  matrix.cpp  matrix.h  multipliers.cpp  multipliers.h  ncolloc.cpp  ncolloc.h  odecolloc.cpp  odecolloc.h  odepoint.cpp  odepoint.h  old-system.cpp  old-system.h  (+23 more)
knut/vfgen/: CMakeLists.txt  README  codegen_utils.cpp  codegen_utils.h  ginac_declare_funcs.h  vf.cpp  vf.h  vf_knut.cpp  vf_utils.h  vf_xml.cpp  vfgen.cpp
pdde-tf/: AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README  RELEASES  TODO  build-mac-debug.sh  build-mac.sh  build-unix-debug.sh  build-unix.sh  build-windows.bat  configure.ac  iccconf.sh  knut.spec.cmake  mkrevision.sh  pdde.spec.cmake  pdde.spec.in  regen.sh  wininstaller.nsi.cmake
pdde-tf/cli/: CMakeLists.txt  Makefile.am  main.cpp
pdde-tf/demo/: CMakeLists.txt  Makefile.am  mkxml
pdde-tf/doc/: Makefile.am  ddedoc.cls  manual-bibl.bib  manual.tex
pdde-tf/gui/: CMakeLists.txt  TODO  cfiletoxml.cpp  compthread.cpp  compthread.h  constants.cpp  constants.h  constqtgui.cpp  constqtgui.h  contparams.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  paramview.cpp  paramview.h  pdde.rc  plotdata.cpp  plotdata.h  plotwindow.cpp  plotwindow.h  screendialog.h
pdde-tf/laarpack/: CMakeLists.txt  blas.h  cblaswrap.h  dlamch.c  laarpack.c  laarpack.f  laarpack.h
pdde-tf/libf2c/: CMakeLists.txt  f2c.h  fmtlib.c
pdde-tf/matlab/: Makefile  dde2knut.m  pdde2dde.m  pmat2branch.m  torplot.m  torplotbw.m  torsolplot.m  torsolplotbw.m
pdde-tf/mxml/: CMakeLists.txt  config.h.cmake
pdde-tf/src/: CMakeLists.txt  Makefile.am  basecolloc.cpp  basecolloc.h  basecomp.cpp  basecomp.h  basepoint.cpp  basepoint.h  config.h.cmake  config.h.in  constants.cpp  constants.h  cspblas.c  cspblas.h  hypermatrix.h  knerror.cpp  knerror.h  knutsys.h  main.cpp  mat4data.cpp  mat4data.h  matrix.cpp  matrix.h  multipliers.cpp  multipliers.h  ncolloc.cpp  ncolloc.h  odecolloc.h  odepoint.h  parameters.cpp  parameters.h  pddesys.h  pderror.h  plot.cpp  plot.h  point.cpp  point.h  pointtype.h  polynomial.cpp  polynomial.h  (+10 more)
src/: Makefile.am  Makefile.in  cfile09to10.cpp  charmat.cpp  charmat.h  cspblas.c  cspblas.h  hypermatrix.cpp  hypermatrix.h  main.cpp  matrix.cpp  matrix.h  ncolloc.cpp  ncolloc.h  pddesys.h  pderror.cpp  pderror.h  plot.cpp  plot.h  point.cpp  point.h  pointtype.h  spmatrix.cpp  spmatrix.h  system.cpp  system.h  testfunct.cpp  testfunct.h  torcolloc.cpp  torcolloc.h  torpoint.cpp  torpoint.h
(+595 files in other folders)
